2010-06-30  Andreas Schwab  <schwab@linux-m68k.org>

	* startup.el (command-line): Don't call tool-bar-setup in a
	tty-only build.

2010-06-30  Chong Yidong  <cyd@stupidchicken.com>

	* ruler-mode.el (ruler--save-header-line-format): New fun.
	(ruler-mode): Use it as a setter function, so as not to overwrite
	ruler-mode-header-line-format-old if Ruler mode is on (Bug#5370).

2010-06-29  Chong Yidong  <cyd@stupidchicken.com>

	* vc/vc.el (vc-deduce-backend): New fun.  Handle diff buffers.
	(vc-root-diff, vc-print-root-log, vc-log-incoming)
	(vc-log-outgoing): Use it.
	(vc-diff-internal): Set diff-vc-backend.

	* vc/diff-mode.el (diff-vc-backend): New var.

2010-06-28  Jan Djärv  <jan.h.d@swipnet.se>

	* dynamic-setting.el (font-setting-change-default-font): Remove
	call to message.

2010-06-28  Kenichi Handa  <handa@m17n.org>

	* international/quail.el (quail-insert-kbd-layout): Fix the
	showing of untranslated characters.

2010-06-28  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (delete-active-region): New option.
	(delete-backward-char): Implement in Lisp.
	(delete-forward-char): New command.

	* mouse.el (mouse-region-delete-keys): Deleted.
	(mouse-show-mark): Simplify.

	* bindings.el (global-map): Bind delete and DEL, the former to
	delete-forward-char.

2010-01-16  Lennart Borgman  <lennart.borgman@gmail.com>

	* progmodes/ruby-mode.el (ruby-mode-map): Don't bind TAB.
	(ruby-mode): Bind indent-line-function (Bug#5119).

2010-06-27  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Recognize "0" X resource value.

2010-06-27  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Use X resources to set the value of
	menu-bar-mode and tool-bar-mode, before calling frame-initialize.

	* menu-bar.el (menu-bar-mode):
	* tool-bar.el (tool-bar-mode): Don't change default-frame-alist.
	Set init-value to t.

	* frame.el (frame-notice-user-settings): Don't change
	default-frame-alist based on menu-bar-mode and tool-bar-mode, or