@@ -1,3 +1,8 @@
+2010-06-30  Chong Yidong  <cyd@stupidchicken.com>
+
+	* frame.c (get_future_frame_param, Fmake_terminal_frame): Don't
+	check default-frame-alist.
+
 2010-06-30  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* process.c (create_process): Avoid using invalid file descriptors.
